--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <label for="email" id="email-label">*Email</label>
             <input class="input-text" type="email" name="email" id="email" placeholder="your@email.com" required>
             <label for="number" id="number-label">How old is your Phone</label>
-            <input class="input-text" type="number" id="number" min="0" max="50" placeholder="How many children?">
+            <input class="input-text" type="number" id="number" min="0" max="50" placeholder="How old is your phone?">
            <label for="name" id="name-label">*What repairs where done on your phone?</label>
             <input class="input-text" type="text" name="name" id="name" placeholder="Please insert repair done" required autofocus>
 
@@ -79,11 +79,11 @@
                 <span><input type="radio" name="career" value="other">Not likely</span>                
             </div>
 
-            <label for="career">Preferred method of communication</label>
+            <label for="communication">Preferred method of communication</label>
             <div class="input-click">
-                <span><input type="radio" name="career" value="front-end">Email</span>
-                <span><input type="radio" name="career" value="full-stack">Phone Number</span>
-                <input class="input-text" type="text" id="number" placeholder="Phone number">               
+                <span><input type="radio" name="communication" value="front-end">Email</span>
+                <span><input type="radio" name="communication" value="full-stack">Phone Number</span>
+                <input class="input-text" type="number" id="number" placeholder="Phone number">               
             </div>
 
             
